--- a/1.universalSelector.html
+++ b/1.universalSelector.html
@@ -12,6 +12,29 @@
     <!-- <h1 class="Class">Class Selector</h1> -->
     <!-- <h1 id="id">ID Selector</h1> -->
      <h1>Child Selector</h1>
+<!-- <div>
+    <h2>H2 inside div</h2> 
+    <p>p inside div</p>
+</div>
+<span>
+    <h2>H2 inside span</h2>
+    <p>p inside span</p>
+</span>
+
+    <h2>An h2</h2>
+    <span>A span</span>
+    <div>A div</div>
+    <p>A paragraph</p> -->
+    <h1>Descendant Selector</h1>
+    <div>
+    <h2>H2 inside div</h2> 
+    <p>p inside div</p>
+</div>
+<span>
+    <h2>H2 inside span</h2>
+    <p>p inside span</p>
+</span>
+
     <h2>An h2</h2>
     <span>A span</span>
     <div>A div</div>
