--- a/1.universalSelector.html
+++ b/1.universalSelector.html
@@ -29,6 +29,12 @@
     <div>
     <h2>H2 inside div</h2> 
     <p>p inside div</p>
+    <div>
+        <ul>
+            <li>Item</li>
+            <li>Item</li>
+        </ul>
+    </div>
 </div>
 <span>
     <h2>H2 inside span</h2>
