--- a/1.universalSelector.html
+++ b/1.universalSelector.html
@@ -11,7 +11,7 @@
     <!-- <h1>Type Selector</h1> -->
     <!-- <h1 class="Class">Class Selector</h1> -->
     <!-- <h1 id="id">ID Selector</h1> -->
-     <h1>Child Selector</h1>
+     <!-- <h1>Child Selector</h1> -->
 <!-- <div>
     <h2>H2 inside div</h2> 
     <p>p inside div</p>
@@ -25,7 +25,7 @@
     <span>A span</span>
     <div>A div</div>
     <p>A paragraph</p> -->
-    <h1>Descendant Selector</h1>
+    <!-- <h1>Descendant Selector</h1>
     <div>
     <h2>H2 inside div</h2> 
     <p>p inside div</p>
@@ -44,6 +44,22 @@
     <h2>An h2</h2>
     <span>A span</span>
     <div>A div</div>
-    <p>A paragraph</p>
+    <p>A paragraph</p> -->
+    <!-- <h1>    Adjacent Sibling Selector</h1>
+    <span>a span</span>
+    <h1>an h1</h1>
+    <p>a p</p>
+    <p>a p</p>
+    <p>a p</p>
+    <h1>an h1</h1>
+    <div>a div</div> -->
+    <!-- <h1>Genral Sibling Selector</h1>
+    <span>a span</span>
+    <h1>an h1</h1>
+    <p>a p</p>
+    <p>a p</p>
+    <p>a p</p>
+    <h1>an h1</h1>
+    <div>a div</div> -->
 </body>
 </html>
